--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
-  "name": "mtgleaguebot",
+  "name": "mtg-leaguebot",
   "version": "1.0.0",
+  "description": "A Discord bot for tracking Magic: The Gathering league standings and tournament results",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node testParser.js",
+    "start": "node index.js"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Xioshiva/mtg-leaguebot.git"
+  },
+  "keywords": [
+    "mtg",
+    "discord",
+    "bot",
+    "league",
+    "magic",
+    "the",
+    "gathering"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^5.4.1",
-    "discord.js": "^14.21.0",
-    "dotenv": "^17.0.0",
-    "mongodb": "^6.17.0",
-    "node-fetch": "^3.3.2",
-    "sqlite3": "^5.1.7",
-    "winston": "^3.17.0"
-  },
-  "description": ""
+    "chalk": "^5.3.0"
+  }
 }
