--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^5.3.0"
+    "chalk": "^5.3.0",
+    "discord.js": "^14.21.0",
+    "dotenv": "^17.0.0",
+    "mongodb": "^6.17.0",
+    "node-fetch": "^3.3.2",
+    "winston": "^3.17.0"
   }
 }
